# Artificial-Intelligence-Agentic-Development

./: pyproject.toml
Projects/health-agent-project/backend/: main.py
Projects/health-agent-project/frontend/src/app/: globals.css  layout.tsx  page.tsx
database/: fastapi_mongodb.py
fastapi/: custom-exceptions.py  file_upload.py  middleware.py  routing_concept.py
fastapi-mongodb/: fastapi_mongodb.py
fastapi-postgres/: alembic.ini  main.py  readme.md
fastapi-postgres/alembic/: env.py
fastapi-postgres/alembic/versions/: 10335489c6f3_create_users_table_and_make_.py  75f3492189ef_status_column_added.py  eb1b09471e59_create_users_table_and_make_.py  ef3ead05a7d6_change_coloumn_nullable_values.py  fec2d45ffb5d_create_todos_table.py
fastapi-postgres/config/: database.py
fastapi-postgres/models/: todo_model.py
fastapi-postgres/routes/: todo_routes.py  user_routes.py
fastapi-postgres/utils/: auth_utils.py
fastapi-postgres/validations/: validation.py
fastapi/folder-standard/: main.py  pyproject.toml
fastapi/folder-standard/routes/: auth_routes.py  posts_routes.py
fastapi/folder-standard/utils/: post_utility.py
health-agent/: main.py
langgraph/: lang_graph_basic_agent.py  langraph_agent.py
model-development/: pyproject.toml
openai_agent_sdk/: basic_configuration.py
openai_agent_sdk/agents/: bill_calculate_agent.py  context_via tool_call.py  context_via_instructions.py  context_via_web_search.py  local_context.py  output_types.py  todo_agent.py  todo_agent_mongodb.py
openai_agent_sdk/example/: customer_service_support.py
openai_agent_sdk/streaming/: raw_response_events.py
openai_agent_sdk/tracing/: local_tracing.py  openai_tracing.py
poetry-test/: main.py  pyproject.toml
university_registration/: main.py
university_registration(FastApi(Path-Query-Body Parameter))/: pyproject.toml
