[project]
name = "ai-agentic-development"
version = "0.1.0"
description = ""
authors = [
    {name = "iCode-Stack",email = "usman261295@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pymongo[srv] (>=4.13.2,<5.0.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "uv (>=0.6.3,<0.7.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "psycopg-binary (>=3.2.5,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "numpy (==2.1.0)",
    "openai-agents (>=0.0.19,<0.0.20)",
    "tavily-python (>=0.7.9,<0.8.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "langgraph (>=0.6.4,<0.7.0)",
    "langchain-community (>=0.3.16)",
    "langchain (>=0.3.17)",
    "langchain-core (>=0.3.33)",
    "langchain-openai (>=0.2.14)",
    "langchain-google-genai (>=2.0.9)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
